--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@solana/web3.js": "^1.87.6",
     "@tsconfig/node16": "^16.1.1",
     "bigint-buffer": "^1.1.5",
-    "dotenv": "^16.3.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@solana-developers/node-helpers": "^1.2.1",
     "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
